src/test/ui/parser/pat-lt-bracket-1.stderr
error: expected one of `=>`, `@`, `if`, or `|`, found `<`
  --> $DIR/pat-lt-bracket-1.rs:5:7
   |
LL |     x < 7 => (),
   |       ^ expected one of `=>`, `@`, `if`, or `|` here

error: aborting due to previous error

